--- a/assets/css/collapse.css
+++ b/assets/css/collapse.css
@@ -1,16 +1,19 @@
 .container {
-    width:100%;
-    border:1px solid #d3d3d3;
+    width: 100%;
+    border: 1px solid #ffffff;
 }
+
 .container div {
-    width:100%;
+    width: 100%;
 }
+
 .container .header {
-    background-color:#d3d3d3;
+    background-color: #ffffff;
     padding: 2px;
     cursor: pointer;
     font-weight: bold;
 }
+
 .container .content {
     display: none;
-    padding : 5px;
+    padding: 5px;
