[ADD] update style

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -14,3 +14,11 @@
     </div>
   </div>
 </div>
+
+<script>
+  document.querySelector('.greedy-nav button').addEventListener('click', function() {
+    this.classList.toggle('active');
+    document.querySelector('.visible-links').classList.toggle('active');
+    document.querySelector('.hidden-links').classList.toggle('active');
+  });
+</script>
