--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,6 +14,7 @@ $global-transition: all 0.2s ease-in-out;
   --text-color: #2D3748;
   --border-color: #CBD5E0;
   --code-background-color: #F7FAFC;
+  --background-color: #FFFFFF;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -24,6 +25,7 @@ $global-transition: all 0.2s ease-in-out;
     --text-color: #E2E8F0;
     --border-color: #4A5568;
     --code-background-color: #2D3748;
+    --background-color: #2D3748;
   }
 }
 
