--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -59,6 +59,7 @@
             max-width: 400px;
             box-shadow: 3px 3px 6px #888;
             object-fit: cover;
+            border-radius: 8px;
         }
     }
     
@@ -104,6 +105,6 @@ h1:before, .anchor:before {
     margin-top: .5em;
     margin-left: -.5em;
     color: white;
-    background-color: #007bff;
+    background-color: $primary-color;
     font-size: .8em;
 }
