--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -135,6 +135,19 @@ $base-border-radius: 20px;
     margin-top: -1.5em;
     padding-left: 1.25rem;
   }
+
+  .paper-links {
+    margin-top: 0.75rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+
+    .btn {
+      margin-bottom: 0;
+      min-width: 7.5rem;
+      text-decoration: none;
+    }
+  }
 }
 
 .page__hero {
