--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -56,7 +56,9 @@
         width: 100%;
         order: 2;
         img {
-            max-width: 400px;
+            width: 100%;
+            max-width: 240px;
+            height: 160px;
             box-shadow: 3px 3px 6px #888;
             object-fit: cover;
             border-radius: 8px;
